--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
+    "google": "^2.0.0",
     "jade": "~1.9.1",
     "moment": "^2.13.0",
     "morgan": "~1.5.1",
